[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6"
actix-web-actors = "4.1"
actix = "0.13.3"
actix-files = "0.6"

env_logger = "0.11"
log = "0.4"
rand = "0.8"
serde_json = "1.0.117"
serde = {version = "1.0.203", features = ["derive"]}
